<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background"
    android:backgroundTint="@color/dark_background"
    android:padding="8dp"
    tools:context=".ui.activity.MovieAndTvSeriesDetailActivity">

    <ImageView
        android:id="@+id/film_detail_poster"
        android:layout_width="158dp"
        android:layout_height="211dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/film_detail_genre"
        app:srcCompat="@drawable/loading_image" />

    <TextView
        android:id="@+id/film_detail_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-black"
        android:padding="8dp"
        android:text="@string/retrieving_data"
        android:textColor="@color/primaryYellow"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/film_detail_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/film_detail_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-medium"
        android:padding="8dp"
        android:text="@string/retrieving_data"
        android:textColor="@color/primaryYellow"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/film_detail_rating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/film_detail_title" />

    <TextView
        android:id="@+id/film_description_detail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="sans-serif"
        android:paddingStart="16dp"
        android:text="@string/film_desc_example"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/film_detail_poster"
        app:layout_constraintTop_toBottomOf="@+id/film_detail_genre" />

    <TextView
        android:id="@+id/film_detail_rating"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:background="@color/primaryColor"
        android:fontFamily="sans-serif-black"
        android:gravity="center|center_vertical"
        android:padding="12dp"
        android:text="@string/rating_number_example"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/film_detail_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>